--- a/package.json
+++ b/package.json
@@ -10,8 +10,19 @@
         "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
     },
     "dependencies": {
+        "@react-native-community/masked-view": "^0.1.7",
+        "@react-navigation/native": "^5.1.3",
+        "@react-navigation/stack": "^5.2.8",
+        "install": "^0.13.0",
+        "npm": "^6.14.4",
         "react": "16.11.0",
-        "react-native": "0.62.0"
+        "react-native": "0.62.0",
+        "react-native-elements": "^1.2.7",
+        "react-native-gesture-handler": "^1.6.1",
+        "react-native-reanimated": "^1.7.1",
+        "react-native-safe-area-context": "^0.7.3",
+        "react-native-screens": "^2.4.0",
+        "react-native-vector-icons": "^6.6.0"
     },
     "devDependencies": {
         "@babel/core": "^7.6.2",
@@ -31,10 +42,12 @@
         "eslint-plugin-jsx-a11y": "^6.2.3",
         "eslint-plugin-prettier": "^3.1.2",
         "eslint-plugin-react": "^7.17.0",
+        "identity-obj-proxy": "^3.0.0",
         "jest": "^24.9.0",
         "metro-react-native-babel-preset": "^0.58.0",
-        "react-test-renderer": "16.11.0",
         "prettier": "^2.0.2",
+        "react-native-testing-library": "^1.13.0",
+        "react-test-renderer": "16.11.0",
         "typescript": "^3.8.3"
     },
     "jest": {
@@ -46,6 +59,12 @@
             "jsx",
             "json",
             "node"
+        ],
+        "moduleNameMapper": {
+            ".+\\.(css|styl|less|sass|scss|png|jpg|ttf|woff|woff2)$": "identity-obj-proxy"
+        },
+        "setupFiles": [
+            "./node_modules/react-native-gesture-handler/jestSetup.js"
         ]
     }
 }
