--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "@babel/core": "^7.6.2",
         "@babel/runtime": "^7.6.2",
         "@react-native-community/eslint-config": "^1.0.0",
+        "@testing-library/react-native": "^5.0.3",
         "@types/jest": "^24.0.24",
         "@types/react-native": "^0.62.0",
         "@types/react-test-renderer": "16.9.2",
@@ -46,12 +47,11 @@
         "jest": "^24.9.0",
         "metro-react-native-babel-preset": "^0.58.0",
         "prettier": "^2.0.2",
-        "react-native-testing-library": "^1.13.0",
         "react-test-renderer": "16.11.0",
         "typescript": "^3.8.3"
     },
     "jest": {
-        "preset": "react-native",
+        "preset": "@testing-library/react-native",
         "moduleFileExtensions": [
             "ts",
             "tsx",
